trunk/Archive2/c7/08e6172ae6d7f5/output
main.cpp:9:10: error: cannot initialize a variable of type 'int *' with an lvalue of type 'int'
    int* e = d.a; //treating a-c as a buffer of ints
         ^   ~~~
1 error generated.
